--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "effect-framework-demo",
+  "name": "effect-interactive-lab",
   "private": false,
   "version": "1.0.0",
   "type": "module",
-  "description": "Interactive demo showcasing Effect library's capabilities for building robust TypeScript applications",
+  "description": "Interactive lab showcasing Effect library's capabilities for building robust TypeScript applications",
   "keywords": [
     "effect",
     "typescript",
@@ -15,18 +15,18 @@
     "interactive",
     "react"
   ],
-  "homepage": "https://github.com/your-username/effect-demo#readme",
+  "homepage": "https://github.com/your-username/effect-interactive-lab#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-username/effect-demo.git"
+    "url": "git+https://github.com/your-username/effect-interactive-lab.git"
   },
   "bugs": {
-    "url": "https://github.com/your-username/effect-demo/issues"
+    "url": "https://github.com/your-username/effect-interactive-lab/issues"
   },
   "license": "MIT",
   "author": {
-    "name": "Effect Demo Contributors",
-    "url": "https://github.com/your-username/effect-demo/graphs/contributors"
+    "name": "Effect Interactive Lab Contributors",
+    "url": "https://github.com/your-username/effect-interactive-lab/graphs/contributors"
   },
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\" --names \"SERVER,CLIENT\" --prefix-colors \"blue,green\"",
